--- a/PointOfSale/PointSystem/PointSystem.csproj
+++ b/PointOfSale/PointSystem/PointSystem.csproj
@@ -100,6 +100,24 @@
     </Compile>
     <Compile Include="Helper.cs" />
     <Compile Include="InformationsClass.cs" />
+    <Compile Include="ItemsForms\AddItmeFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ItemsForms\AddItmeFrm.Designer.cs">
+      <DependentUpon>AddItmeFrm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ItemsForms\EditItmeFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ItemsForms\EditItmeFrm.Designer.cs">
+      <DependentUpon>EditItmeFrm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ItemsForms\ManageItmeFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ItemsForms\ManageItmeFrm.Designer.cs">
+      <DependentUpon>ManageItmeFrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,6 +126,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PurchasesForms\AddPurchasesFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PurchasesForms\AddPurchasesFrm.Designer.cs">
+      <DependentUpon>AddPurchasesFrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reports\FrmViewer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -152,6 +176,15 @@
     <EmbeddedResource Include="EmployeeForms\ManageEmployeeFrm.resx">
       <DependentUpon>ManageEmployeeFrm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ItemsForms\AddItmeFrm.resx">
+      <DependentUpon>AddItmeFrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ItemsForms\EditItmeFrm.resx">
+      <DependentUpon>EditItmeFrm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ItemsForms\ManageItmeFrm.resx">
+      <DependentUpon>ManageItmeFrm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -166,6 +199,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="PurchasesForms\AddPurchasesFrm.resx">
+      <DependentUpon>AddPurchasesFrm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Reports\FrmViewer.resx">
       <DependentUpon>FrmViewer.cs</DependentUpon>
     </EmbeddedResource>
@@ -203,9 +239,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ItemsForms\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="Resources\1427924794_Log Out.png" />
   </ItemGroup>
